コメント追加

--- a/src/index.html
+++ b/src/index.html
@@ -4,55 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSRed with Web Components</title>
+    <!-- 4. ./static/client.jsを<script>タグで読み込む -->
+    <!-- 5. Hydration時にclient.jsで定義されたCustom Elementが登録され、Web Componentの機能がアップグレードされる -->
     <script src="./static/client.js" defer></script>
 </head>
 <body>
     <hello-world-button>
-        <template shadowrootmode="open">
-          <style>
-              button {
-                background-color: pink;
-                color: white;
-                padding: 15px 32px;
-                font-size: 16px;
-                margin: 4px 2px;
-                cursor: pointer;
-                }
-          </style>
-          <button type="button">Button1</button>
-        </template>
-      </hello-world-button>
+      <template shadowrootmode="open">
+        <style>
+            button {
+              background-color: pink;
+              color: white;
+              padding: 15px 32px;
+              font-size: 16px;
+              margin: 4px 2px;
+              cursor: pointer;
+              }
+        </style>
+        <button type="button">Button1</button>
+      </template>
+    </hello-world-button>
     <hello-world-button>
-        <template shadowrootmode="open">
-          <style>
-              button {
-                background-color: pink;
-                color: white;
-                padding: 15px 32px;
-                font-size: 16px;
-                margin: 4px 2px;
-                cursor: pointer;
-                }
-          </style>
-          <button type="button">Button2</button>
-        </template>
-      </hello-world-button>
+      <template shadowrootmode="open">
+        <style>
+            button {
+              background-color: pink;
+              color: white;
+              padding: 15px 32px;
+              font-size: 16px;
+              margin: 4px 2px;
+              cursor: pointer;
+              }
+        </style>
+        <button type="button">Button2</button>
+      </template>
+    </hello-world-button>
     <hello-world-button>
-        <template shadowrootmode="open">
-          <style>
-              button {
-                background-color: pink;
-                color: white;
-                padding: 15px 32px;
-                font-size: 16px;
-                margin: 4px 2px;
-                cursor: pointer;
-                }
-          </style>
-          <button type="button">Button3</button>
-        </template>
-      </hello-world-button>
+      <template shadowrootmode="open">
+        <style>
+            button {
+              background-color: pink;
+              color: white;
+              padding: 15px 32px;
+              font-size: 16px;
+              margin: 4px 2px;
+              cursor: pointer;
+              }
+        </style>
+        <button type="button">Button3</button>
+      </template>
+    </hello-world-button>
       
-      <div id="root"></div>
+     <div id="root"></div>
 </body>
 </html>
