--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <script src="./static/client.js" defer></script>
 </head>
 <body>
+  <h1>Rendered in Server Side</h1>
   <hello-world-button>
       <!-- 1. `<template>`要素を使ってDSDの構造を定義 -->
       <!-- 1.1`<template>`要素の`shadowrootmode`属性にopenを指定 -->
